# bdecode

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: build.yml
.hooks/: pre-commit.sh
src/: bencode.rs  decode.rs  decoder.rs  error.rs  lib.rs  main.rs  torrent.rs
